    fully clear how that translates into separated packages for different
    components.
- Improved: ported everything related to Qt to use the actual Qt4 classes, so
    we can finally get rid of legacy Qt3 support classes. This should reduce
    the number of actually unused dynamic libraries, which we previously had
    to link against.

- Fixed: bundled DICOM library finally works on all tested platforms and all
    tested compilers.
- Fixed: compile error on latest Mac/Intel gcc due to undefined "ushort"
    type.

- Removed: support for AMD Core Math Library (ACML), which was rarely used and
    complicated code unnecessarily
- Removed: push-forward function of reformatx has long been obsolete because
    we can invert any transformation and switch reference and floating image,
    to achieve the same effect.


Release CMTK-1.1.3 (2009-11-18):

- Added: new tool, xform2scalar, to extract scalar measures from deformation
    fields or transformations. This, in combination with "statistics" and
    "sequence" tools, obsoletes the old (and inappropriately named)
    "deformation_field" tool.
- Added: scripts for multi-NEX motion correction and iterative shape averaging
    are now configured in build tree and installed in install tree. These (and
    future scripts) will also be included in installable packages.
- Added: B-spline transformation can now be written in ITK file format, thus
    allowing direct import of "warp" transformations into 3D Slicer.
- Added: new binary builds for Solaris on i386 and x86_64 using SunPro CC
    compiler.

- Removed: obsolete "deformation_field" tool.

- Fixed: average_images tool was broken.
- Fixed: numerous unitialized variables and other things that tripped valgrind
    memory checker.
- Fixed: some more missing tests were added to the configuration of the
    bundled D(4)CMTK library.
- Fixed: cmake file to set up tests when no hash map implementation is found
    cannot set properties for mcwarp and mcaffine tests.